# agentic-kit

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTEXT-MAP.md  LICENSE  README.md  README_en.md  README_zh.md  idf_component.yml
.github/workflows/: ci.yml  deploy-docs.yml
common/: log.c  log.h  rng.c  rng.h  tls.c  tls.h
docs-site/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs-site/docs/: architecture.mdx  concepts.md  faq.md  get-authkey.md  intro.md
docs-site/docs/guides/: audio-format.md  create-agent.md  create-cloud-project.md  create-workflow.md  device-mcp.md  dp-persistence.md  ota-upgrade.md  porting-to-new-platform.md  tls-cert-verification.md  vad-and-interrupt.md
docs-site/docs/reference/: iot-client.md  rtc-client.md  rtc-tcp-client.md
docs-site/docs/tutorials/: chat.md  edu-camera.md  openapi-activate.md  pair-by-ble.md  pair-overall.md  quick-start.md  scan-by-app.md  scan-by-device.md
docs-site/src/css/: custom.css
docs-site/src/pages/: index.module.css  index.tsx
examples/esp-idf/ai/rtc-tcp-client/: CMakeLists.txt  sdkconfig.defaults
examples/esp-idf/ai/rtc-tcp-client/main/: CMakeLists.txt  app_config.h  main.c
examples/esp-idf/components/agentic_kit/: CMakeLists.txt
examples/esp-idf/ota-demo/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
examples/esp-idf/ota-demo/main/: CMakeLists.txt  app_config.h  main.c
examples/esp-idf/pair/pair-by-ble/: CMakeLists.txt  sdkconfig.defaults
examples/esp-idf/pair/pair-by-ble/main/: CMakeLists.txt  app_config.h  main.c  tuya_ble_nimble.c  tuya_ble_nimble.h
examples/esp-idf/pair/scan-by-app/: CMakeLists.txt  sdkconfig.defaults
examples/esp-idf/pair/scan-by-app/main/: CMakeLists.txt  app_config.h  main.c  scan_by_app_pair_demo.h
examples/posix/: CMakeLists.txt
examples/posix/ai/rtc-client/: chat_demo.c  chat_demo.h  chat_demo_main.c  edu_camera_demo.c  edu_camera_demo.h  edu_camera_demo_main.c
examples/posix/ai/rtc-tcp-client/: audio_chat_demo.c  demo_reconnect.h  edu_camera_demo.c  edu_threaded_chat_demo.c  mcp_demo.c  opus_chat_demo.c  text_chat_demo.c  text_query_demo.c
examples/posix/dp-management/: dp_management_demo.c  dp_management_demo.h  dp_management_demo_main.c
examples/posix/ota-demo/: ota_demo.c  ota_demo.h  ota_demo_main.c
examples/posix/pair/api-activate/: activate-demo.sh  activate_demo.c  activate_demo.h  activate_demo_main.c  tuya_openapi.py
examples/posix/pair/scan-by-app/: scan_by_app_pair_demo.c  scan_by_app_pair_demo_main.c
examples/posix/pair/scan-by-device/: scan_by_device_pair_demo.c  scan_by_device_pair_demo.h  scan_by_device_pair_demo_main.c
examples/posix/res/: README.md
modules/iot-client/: CONTEXT.md
modules/iot-client/docs/adr/: 0001-dp-layer-never-initiates-uplink.md
modules/iot-client/include/: iot_client.h  iot_dp.h  iot_ota.h
modules/iot-client/src/: atop.c  atop.h  atop_base.c  atop_base.h  cipher_wrapper.c  cipher_wrapper.h  http_client_interface.c  http_client_interface.h  iot_client.c  iot_client_message.c  iot_client_message.h  iot_config_defaults.h  iot_dns.c  iot_dns.h  iot_dp.c  iot_dp_internal.h  iot_on_boarding.c  iot_on_boarding.h  iot_ota.c  iot_pal_defaults.c  mqtt.c  mqtt.h
modules/iot-client/test/: atop_test.c  cipher_test.c  dns_test.c  iot_client_message_test.c  iot_dp_test.c  iot_ota_test.c  mqtt_test.c  on_boarding_test.c  run_leaks_check.sh  run_valgrind_check.sh
modules/iot-client/test/config/: atop.conf  cert.pem  key.pem  root_cert.pem  root_key.pem
modules/iot-client/test/mock/: atop_mock.py  dns_mock.py  message_mock.py  mqtt_mock.py  mqtt_test_mock.py  on_boarding_mock.py
modules/rtc-client/: LICENSE
modules/rtc-client/include/: stm_errno.h  stm_export.h  stm_open.h  stm_typedef.h
modules/rtc-tcp-client/: CONTEXT.md
modules/rtc-tcp-client/include/: tuya_ai.h
modules/rtc-tcp-client/src/: tai_attrs.c  tai_client.c  tai_crypto.c  tai_internal.h  tai_packet.c  tai_pkt_log.c  tai_protocol.c  tai_tls.c  tai_transport.c
modules/rtc-tcp-client/test/: run_e2e.sh  tai_pal_loopback.c  tai_pal_loopback.h  test_core.c  test_integration.c
modules/tuya-ble/: CONTEXT.md
modules/tuya-ble/include/: tuya_ble_prov.h
modules/tuya-ble/src/: tuya_ble_prov.c
modules/tuya-ble/test/: test_prov.c  tuya_ble_hal_host.c  tuya_ble_mbedtls_config.h
pal/: pal.h  pal_freertos.c  pal_posix.c
